// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asset Notifications Screen should render snapshot 1`] = `
<Memo(AnimatedProfileHeader)
  isOuterScrollEnabled={true}
  onBackPress={[Function]}
  sectionHeader="notification"
  sectionTitleType="semiBold"
  title="dashboard"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "height": 800,
        },
      ]
    }
  >
    <SearchBar
      containerStyle={
        Object {
          "margin": 16,
        }
      }
      placeholder="searchByKeyword"
      updateValue={[Function]}
      value=""
    />
    <Memo(NotificationBox)
      data={
        Array [
          Object {},
        ]
      }
      onLoadMore={[Function]}
      onPress={[Function]}
      shouldEnableOuterScroll={[Function]}
      unreadCount={0}
    />
  </View>
</Memo(AnimatedProfileHeader)>
`;

exports[`Asset Notifications Screen should render snapshot with empty notifications 1`] = `
<Memo(AnimatedProfileHeader)
  isOuterScrollEnabled={true}
  onBackPress={[Function]}
  sectionHeader="notification"
  sectionTitleType="semiBold"
  title="dashboard"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
        },
        Object {
          "height": 200,
        },
      ]
    }
  >
    <SearchBar
      containerStyle={
        Object {
          "margin": 16,
        }
      }
      placeholder="searchByKeyword"
      updateValue={[Function]}
      value=""
    />
    <EmptyState />
  </View>
</Memo(AnimatedProfileHeader)>
`;
